package exercises;

public class Course {

    protected String registrationNumber;
    protected String name;
    protected String registrationYear;
    protected float score1;
    protected float score2;

}
