@startuml Courses
/'
!define DARKBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml
'/

interface ICourse {
    +averageScore(): int
    +scoreResult(): boolean
}

abstract class Course {
    #registrationNumber: String
    #name: String
    #entryYear: int
    #score1: float
    #score2: float

    +averageScore(): int
    +scoreResult(): boolean
}

class CourseLong {
    -courseDuration: int
    -score3: float

    +averageScore(): int
    -finalAverage(): String
    +scoreResult(): boolean
}

class CourseSemester {
    -entrySemester: int
    -score3: float

    +averageScore(): int
    +scoreResult(): boolean
}

class CourseShort {
    -entryMonth: int

    +averageScore(): int
    +scoreResult(): boolean
}

class CourseYear {
    -score3: float
    -score4: float

    +averageScore(): int
    +scoreResult(): boolean
}

class CourseData {
    studentsVector: Course[]

    addStudent(): Course
    showStudentsFinalResult(): void
}

ICourse <|.. Course
Course <|-- CourseLong
Course <|--- CourseSemester
Course <|--- CourseShort
Course <|-- CourseYear
CourseData <- Course

@enduml